// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FileCounts in default stage 1`] = `
<div>
  <a
    href="/study/SD_8WX8QQ06/documents"
  >
    <i
      aria-hidden="true"
      class="grey file icon"
    />
    2
     documents
  </a>
  <div
    class="ui horizontal list ml-15"
    role="list"
  >
    <div
      class="item"
      role="listitem"
    >
      <div
        class="ui orange mini circular empty label"
      />
       
      2
    </div>
  </div>
</div>
`;

exports[`renders FileFileCounts with empty file list 1`] = `
<div>
  <a
    href="/study/SD_8WX8QQ06/documents"
  >
    <i
      aria-hidden="true"
      class="grey file icon"
    />
    No
     documents
  </a>
  <div
    class="ui horizontal list ml-15"
    role="list"
  />
</div>
`;
